[package]
name = "caching-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dashmap = { version = "6.1.0", features = ["raw-api"] }
http = "1.3.1"
